--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend",
-  "homepage": "https://Emiey123.github.io/Suavelook/",
+  "name": "suavelooks-frontend",
+  "homepage": "https://github.com/Emiey123/Suave.git",
   "private": true,
   "version": "0.0.0",
   "type": "module",
